--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,7 +36,7 @@ body {
 }
 
 #footer {
-    background: #333;
+    background: #33a;
     color: white;
     font-weight: bold;
     text-align: center;
